Time optimized solution by searching for Knight moves in advance.
Resources: 0.030s, 17.87 MB
Maximum single-case runtime: 0.030s
Final score: 100/100 (12.0/12 points)

https://dmoj.ca/submission/6303066

--- a/KnightlyPursuit.Tests/KnightlyPursuit.Tests.csproj
+++ b/KnightlyPursuit.Tests/KnightlyPursuit.Tests.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="KnightlyPursuitSolverTests.cs" />
+    <Compile Include="MinMovesForKnightCalculatorTests.cs" />
     <Compile Include="PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
