Completed initial solution to DM::OJ problem 'WC '18 Contest 1 S3 - Reach for the Top'. Successfully passed batches of test except Batch #6, which failed with 'Time Limit Exceeded' message. Suggests that some time optimization is required.
Resources: ---, 40.26 MB
Final score: 20/27 (8.889/12 points)

https://dmoj.ca/submission/6306465

--- a/LineJumper/LineJumper.csproj
+++ b/LineJumper/LineJumper.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="README.md" />
+    <None Include="sample-input1" />
+    <None Include="sample-input2" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
